# wild

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  README.md  build.bat  setup.ps1  test.bat  vcpkg.json
.github/workflows/: build-and-test.yml  build.yml  test.yml
docs/: ARCHITECTURE.md  BUILDING.md  COLLISION.md  EDITOR.md  MAINPAGE.md  RENDERING.md  SETUP.md  TIME_SYSTEM.md  footer.html  mathjax-config.js  stylesheet.css
shaders/: sprite.frag  sprite.vert
src/: CollisionMap.h  ColumnProxy.h  DialogueManager.cpp  DialogueManager.h  DialogueSystem.h  DoxygenGroups.h  Editor.cpp  Editor.h  EditorInput.cpp  EditorRendering.cpp  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  GameDialogue.cpp  GameEditorRendering.cpp  GameInput.cpp  GameStateManager.h  IGameCharacter.h  IRenderer.cpp  IRenderer.h  NavigationMap.h  NonPlayerCharacter.cpp  NonPlayerCharacter.h  OpenGLRenderer.cpp  OpenGLRenderer.h  ParticleSystem.cpp  ParticleSystem.h  PatrolRoute.cpp  PatrolRoute.h  PerspectiveTransform.h  PlayerCharacter.cpp  PlayerCharacter.h  RendererAPI.h  RendererFactory.cpp  RendererFactory.h  SkyRenderer.cpp  SkyRenderer.h  Texture.cpp  Texture.h  (+14 more)
tests/: CollisionMapTests.cpp  TimeManagerTests.cpp
